--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -127,7 +127,7 @@
   <div class="task-container">
     <a href="tugas-bIndo.html">📘 Bahasa Indonesia</a>
     <a href="matematika/tugas_matematika.html">📗 Matematika</a>
-    <a href="pancasila/soal_pkn_25_nov_25.html">📙 Pancasila</a>
+    <a href="pancasila/10022026.html">📙 Pancasila</a>
     <a href="tugas-IPAS.html">🌍 IPAS</a>
     <a href="tugas-BJ.html">🎋 Bahasa Jawa</a>
   </div>
