--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -125,11 +125,12 @@
 
   <!-- Tombol Mapel -->
   <div class="task-container">
-    <a href="tugas-bIndo.html">📘 Bahasa Indonesia</a>
-    <a href="matematika/tugas_matematika.html">📗 Matematika</a>
-    <a href="pancasila/10022026.html">📙 Pancasila</a>
+    <a href="tugas-bIndo.html">📚 Bahasa Indonesia</a>
+    <a href="matematika/tugas_matematika.html">📐 Matematika</a>
+    <a href="pancasila/10022026.html">🏛️ Pancasila</a>
     <a href="tugas-IPAS.html">🌍 IPAS</a>
     <a href="tugas-BJ.html">🎋 Bahasa Jawa</a>
+    <a href="tugas-seni.html">🎼 Bahasa Jawa</a>
   </div>
 
   <!-- Suara klik interaktif -->
