--- a/kelas-5/tugas/tugas-IPAS.html
+++ b/kelas-5/tugas/tugas-IPAS.html
@@ -119,19 +119,24 @@
       display: block;
     }
 
-    /* Kalender */
+    /* Kalender melayang */
     #calendarBox {
       display: none;
-      margin-top: 10px;
-      background: white;
-      padding: 10px;
-      border-radius: 10px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255,255,255,0.95);
+      padding: 20px 30px;
+      border-radius: 15px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
       text-align: center;
+      z-index: 1001;
     }
 
     #calendarBox input {
-      padding: 8px;
-      font-size: 1rem;
+      padding: 10px;
+      font-size: 1.1rem;
       border-radius: 8px;
       border: 2px solid #0288d1;
     }
@@ -150,7 +155,7 @@
       font-weight: bold;
       color: #0288d1;
       text-align: center;
-      z-index: 1000;
+      z-index: 1002;
       animation: bounce 0.6s;
     }
 
@@ -190,11 +195,13 @@
     <div class="dropdown-content">
       <a href="tugas_IPAS_11_Nov_25.html">12 November 2025</a>
       <a href="#" id="tugasLain">📆 Pilih Tanggal Lain</a>
-      <div id="calendarBox">
-        <input type="date" id="calendar">
-      </div>
     </div>
   </div>
+</div>
+
+<!-- Kalender melayang -->
+<div id="calendarBox">
+  <input type="date" id="calendar">
 </div>
 
 <div id="popupMessage" class="popup">
@@ -208,20 +215,22 @@
   const calendar = document.getElementById("calendar");
   const popup = document.getElementById("popupMessage");
 
+  // buka dropdown
   dropdown.querySelector(".dropbtn").onclick = (e) => {
     e.stopPropagation();
     dropdown.classList.toggle("show");
   };
 
+  // klik Pilih Tanggal Lain → tampil kalender melayang
   document.getElementById("tugasLain").onclick = (e) => {
     e.preventDefault();
     calendarBox.style.display = "block";
   };
 
+  // pilih tanggal
   calendar.onchange = () => {
     const tanggal = calendar.value;
 
-    // tanggal yang sudah ada soalnya
     if (tanggal === "2025-11-12") {
       window.location.href = "tugas_IPAS_11_Nov_25.html";
     } else {
@@ -230,6 +239,7 @@
     }
   };
 
+  // klik di luar dropdown → tutup
   window.onclick = () => dropdown.classList.remove("show");
 </script>
 
