--- a/kelas-5/tugas/tugas-IPAS.html
+++ b/kelas-5/tugas/tugas-IPAS.html
@@ -199,10 +199,11 @@
     }
   };
 
-  // Klik di area manapun → tutup dropdown & hilangkan popup
+  // Klik di area manapun → tutup dropdown, popup, & kalender
   window.onclick = () => {
     dropdown.classList.remove("show");
     popup.classList.remove("show");
+    calendarBox.style.display = "none";
   };
 
   // Supaya klik di kalender tidak menutup sendiri popup & dropdown
