--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -130,7 +130,7 @@
     <a href="pancasila/10022026.html">🏛️ Pancasila</a>
     <a href="tugas-IPAS.html">🌍 IPAS</a>
     <a href="tugas-BJ.html">🎋 Bahasa Jawa</a>
-    <a href="tugas-seni.html">🎼 Seni</a>
+    <a href="seni/tugas_seni_120226.html">🎼 Seni</a>
   </div>
 
   <!-- Suara klik interaktif -->
