--- a/kelas-5/tugas/seni/tugas_seni_120226.html
+++ b/kelas-5/tugas/seni/tugas_seni_120226.html
@@ -142,7 +142,7 @@
   </div>
   <div class="nav-right">
     <a href="../../index.html">🏠 Beranda</a>
-    <a href="tugas.html">◀️ Kembali</a>
+    <a href="../tugas.html">◀️ Kembali</a>
     <a href="#">🖼️ Galeri</a>
   </div>
 </nav>
