--- a/kelas-5/tugas/tugas-IPAS.html
+++ b/kelas-5/tugas/tugas-IPAS.html
@@ -196,6 +196,8 @@
     calendarBox.style.display = "none"; // hilangkan kalender setelah pilih tanggal
     if (tanggal === "2025-11-12") {
       window.location.href = "tugas_IPAS_11_Nov_25.html";
+    } else if (tanggal === "2026-02-12") {
+      window.location.href = "https://nurchintapembatik.my.canva.site/ipas-organ-pernafan-letak-wilayah";
     } else {
       popup.classList.add("show");
     }
