--- a/kelas-5/tugas/tugas-IPAS.html
+++ b/kelas-5/tugas/tugas-IPAS.html
@@ -168,8 +168,9 @@
 
 <!-- Pesan melayang -->
 <div id="popupMessage" class="popup">
-  🎉 Yeay! Tugasnya belum tersedia 😄  
-  <br>📚 Jangan khawatir, tetap semangat belajar ya! 💪✨
+  🌟 Wah! Tugas ini belum tersedia 😄  
+  <br>📚 Jangan menyerah, terus belajar dan tetap semangat ya! 💪✨
+  <br>🕒 Nantikan tanggal 12 Februari 2026 pukul 07:00 ⏰
 </div>
 
 <script>
@@ -199,6 +200,8 @@
     } else if (tanggal === "2026-02-12") {
       window.location.href = "https://nurchintapembatik.my.canva.site/ipas-organ-pernafan-letak-wilayah";
     } else {
+      // Pesan melayang semangat jika tanggal lain
+      popup.innerHTML = `🌟 Wah! Tugas ini belum tersedia 😄<br>📚 Jangan menyerah, terus belajar dan tetap semangat ya! 💪✨<br>🕒 Nantikan tanggal 12 Februari 2026 pukul 07:00 ⏰`;
       popup.classList.add("show");
     }
   };
