--- a/kelas-5/tugas/matematika/tugas_matematika.html
+++ b/kelas-5/tugas/matematika/tugas_matematika.html
@@ -198,11 +198,11 @@
   const calendarInput = document.getElementById("calendarInput");
   const pesan = document.getElementById("pesanMelayang");
 
-  const waktuTugas1 = new Date(2026, 1, 10, 7, 1, 0);
+  const waktuTugas1 = new Date(2026, 1, 10, 7, 0, 0);
   const linkTugas1 = "https://nurchintapembatik.my.canva.site/matematika-ciri-ciri-segitiga";
 
   const waktuTugas2 = new Date(2026, 1, 12, 7, 0, 0);
-  const linkTugas2 = "https://nurchintapembatik.my.canva.site/matematika-bangun-datar";
+  const linkTugas2 = "https://nurchintapembatik.my.canva.site/matematika-persegi";
 
   dropbtn.onclick = e => {
     e.stopPropagation();
