--- a/kelas-5/hutan/hutan.html
+++ b/kelas-5/hutan/hutan.html
@@ -142,7 +142,7 @@
     <a href="#ekspedisi.html" class="map-item"><span class="emoji">🐾</span>Ekspedisi Alam</a>
     <a href="#kekuatan.html" class="map-item"><span class="emoji">⚡</span>Kekuatan Super di Sekitar Kita</a>
     <a href="#planet.html" class="map-item"><span class="emoji">🌎</span>Planet Biru yang Penuh Teka-Teki</a>
-    <a href="#tubuh.html" class="map-item"><span class="emoji">🧑</span>Menjelajahi Tubuh Manusia</a>
+    <a href="tubuh.html" class="map-item"><span class="emoji">🧑</span>Bab 5 Menjelajahi Tubuh Manusia</a>
      <a href="arena.html" class="map-item"><span class="emoji">🧠</span>Arena Pintar</a>
  
   </div>
