--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -1,1 +1,195 @@
+<!DOCTYPE html>   
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🧑 Bab 5 Menjelajahi Tubuh Manusia</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      height: 100%;
+      width: 100%;
+      overflow-x: hidden;
+      background: url('https://i.imgur.com/O7bTFPD.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      color: #333;
+    }
+
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+    }
+
+    .nav-left img {
+      height: 45px;
+      margin-right: 0.5rem;
+    }
+
+    .nav-right {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+    }
+
+    .nav-right a {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 0.4rem 0.8rem;
+      border-radius: 6px;
+      text-decoration: none;
+      color: #0288d1;
+      font-weight: bold;
+      font-size: 0.9rem;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .nav-right a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .title-section {
+      text-align: center;
+      margin: 20px 15px 10px;
+    }
+
+    .title-section h1 {
+      font-size: 2rem;
+      background: rgba(255,255,255,0.85);
+      display: inline-block;
+      padding: 0.5rem 1rem;
+      border-radius: 12px;
+      color: #0288d1;
+      text-shadow: 1px 1px 2px rgba(255,255,255,0.6);
+    }
+
+    .title-section p {
+      background: rgba(255,255,255,0.8);
+      color: #0288d1;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      max-width: 90%;
+      margin: 10px auto;
+      font-size: 1rem;
+    }
+
+    /* ================= MAP GRID STYLE ================= */
+
+    .map-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 15px;
+      margin: 20px auto;
+      max-width: 900px;
+      padding: 0 15px;
+    }
+
+    .map-item {
+      padding: 20px;
+      border-radius: 16px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      color: white;
+    }
+
+    .map-item:hover {
+      transform: translateY(-5px) scale(1.05);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.25);
+    }
+
+    /* ===== WARNA SESUAI MATERI ===== */
+
+    .pernapasan {
+      background: linear-gradient(135deg, #4fc3f7, #0288d1);
+    }
+
+    .pernapasan:hover {
+      background: linear-gradient(135deg, #81d4fa, #0277bd);
+    }
+
+    .pencernaan {
+      background: linear-gradient(135deg, #ffb74d, #f57c00);
+    }
+
+    .pencernaan:hover {
+      background: linear-gradient(135deg, #ffcc80, #ef6c00);
+    }
+
+    .pertumbuhan {
+      background: linear-gradient(135deg, #81c784, #388e3c);
+    }
+
+    .pertumbuhan:hover {
+      background: linear-gradient(135deg, #a5d6a7, #2e7d32);
+    }
+
+    .emoji {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+  </style>
+</head>
+<body>
+
+  <nav>
+    <div class="nav-left">
+      <img src="https://i.imgur.com/sxm7RR1.png" alt="Logo Gresik">
+      <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo Tut Wuri" style="height: 50px;">
+      <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
+    </div>
+    <div class="nav-right">
+      <a href="../../index.html">🏠 Beranda</a>
+      <a href="hutan.html">◀️ Kembali</a>
+      <a href="#">🖼️ Galeri</a>
+      <a href="kelas.html">🏫 Kelas</a>
+    </div>
+  </nav>
+
+  <div class="title-section">
+    <h1>🧑 Bab 5 Menjelajahi Tubuh Manusia</h1>
+    <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
+
+    <div class="map-grid">
+      <a href="#sistem-pernapasan.html" class="map-item pernapasan">
+          <span class="emoji">💙</span> Sistem Pernapasan Manusia
+      </a>
+      
+      <a href="#Sistem-pencernaa.html" class="map-item pencernaan">
+          <span class="emoji">🍎</span> Sistem Pencernaan
+      </a>
+      
+      <a href="#Pertumbuhan.html" class="map-item pertumbuhan">
+          <span class="emoji">🌱</span> Pertumbuhan dan Perkembangan Manusia
+      </a>
+    </div>
+
+  </div>
+
+  <audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
+  <script>
+    const clickSound = document.getElementById("clickSound");
+    const allButtons = document.querySelectorAll("a, .map-item");
+    allButtons.forEach(btn => {
+      btn.addEventListener("click", () => {
+        clickSound.currentTime = 0;
+        clickSound.play();
+      });
+    });
+  </script>
+
+</body>
+</html>
 
