--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -152,9 +152,9 @@
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="hutan.html">◀️ Kembali</a>
+      <a href="../hutan.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
-      <a href="kelas.html">🏫 Kelas</a>
+      <a href="../kelas.html">🏫 Kelas</a>
     </div>
   </nav>
 
