--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -163,15 +163,15 @@
     <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
 
     <div class="map-grid">
-      <a href="#sistem-pernapasan.html" class="map-item pernapasan">
+      <a href="sistem-pernapasan.html" class="map-item pernapasan">
           <span class="emoji">💙</span> Sistem Pernapasan Manusia
       </a>
       
-      <a href="#Sistem-pencernaa.html" class="map-item pencernaan">
+      <a href="#sistem-pencernaan.html" class="map-item pencernaan">
           <span class="emoji">🍎</span> Sistem Pencernaan
       </a>
       
-      <a href="#Pertumbuhan.html" class="map-item pertumbuhan">
+      <a href="#pertumbuhan.html" class="map-item pertumbuhan">
           <span class="emoji">🌱</span> Pertumbuhan dan Perkembangan Manusia
       </a>
     </div>
