--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -151,10 +151,10 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../../index.html">🏠 Beranda</a>
-      <a href="../hutan.html">◀️ Kembali</a>
+      <a href="../../../index.html">🏠 Beranda</a>
+      <a href="../../hutan.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
-      <a href="../../kelas.html">🏫 Kelas</a>
+      <a href="../../../kelas.html">🏫 Kelas</a>
     </div>
   </nav>
 
@@ -163,7 +163,7 @@
     <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
 
     <div class="map-grid">
-      <a href="sistem-pernapasan.html" class="map-item pernapasan">
+      <a href="soal/sistem-pernapasan.html" class="map-item pernapasan">
           <span class="emoji">💙</span> Sistem Pernapasan Manusia
       </a>
       
