--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -201,8 +201,8 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../../index.html">🏠 Beranda</a>
-      <a href="../hutan.html">◀️ Kembali</a>
+      <a href="../../../index.html">🏠 Beranda</a>
+      <a href="../../hutan.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="../../kelas.html">🏫 Kelas</a>
     </div>
