--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -219,7 +219,7 @@
     <div class="dropdown">
       <button class="dropbtn">🚀 Mulai Petualangan</button>
       <div class="dropdown-content">
-        <a href="#" onclick="belumAda()">🌟 Petualangan 1</a>
+        <a href="https://nurchintapembatik.my.canva.site/organ-pernapasan-1" onclick="belumAda()">🌟 Petualangan 1</a>
         <a href="#" onclick="belumAda()">🚀 Petualangan 2</a>
         <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
         <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
