--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -201,10 +201,10 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../../../../index.html">🏠 Beranda</a>
-      <a href="../../hutan.html">◀️ Kembali</a>
+      <a href="../../index.html">🏠 Beranda</a>
+      <a href="../hutan.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
-      <a href="../../../kelas.html">🏫 Kelas</a>
+      <a href="../../kelas.html">🏫 Kelas</a>
     </div>
   </nav>
 
@@ -219,7 +219,7 @@
     <div class="dropdown">
       <button class="dropbtn">🚀 Mulai Petualangan</button>
       <div class="dropdown-content">
-        <a href="https://nurchintapembatik.my.canva.site/organ-pernapasan-1" onclick="belumAda()">🌟 Petualangan 1</a>
+        <a href="https://nurchintapembatik.my.canva.site/organ-pernapasan-1" target="_blank">🌟 Petualangan 1</a>
         <a href="#" onclick="belumAda()">🚀 Petualangan 2</a>
         <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
         <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
