--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -202,7 +202,7 @@
     </div>
     <div class="nav-right">
       <a href="../../../../index.html">🏠 Beranda</a>
-      <a href="../../pernapasan-pencernaan-pertumbuhan.html">◀️ Kembali</a>
+      <a href="../pernapasan-pencernaan-pertumbuhan.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="../../../kelas.html">🏫 Kelas</a>
     </div>
