--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -219,8 +219,8 @@
     <div class="dropdown">
       <button class="dropbtn">🚀 Mulai Petualangan</button>
       <div class="dropdown-content">
-        <a href="https://nurchintapembatik.my.canva.site/organ-pernapasan-1" target="_blank">🌟 Petualangan 1</a>
-        <a href="organ-pernapasan-2.html" target="_blank">🚀 Petualangan 2</a>
+        <a href="https://nurchintapembatik.my.canva.site/organ-pernapasan-1">🌟 Petualangan 1</a>
+        <a href="organ-pernapasan-2.html">🚀 Petualangan 2</a>
         <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
         <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
         <a href="#" onclick="belumAda()">🌿 Petualangan 5</a>
