--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -220,7 +220,7 @@
       <button class="dropbtn">🚀 Mulai Petualangan</button>
       <div class="dropdown-content">
         <a href="organ-pernapasan-2.html">🌟 Petualangan 1</a>
-        <a href="#organ-pernapasan-2.html">🚀 Petualangan 2</a>
+        <a href="#" onclick="belumAda()">🚀 Petualangan 2</a>
         <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
         <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
         <a href="#" onclick="belumAda()">🌿 Petualangan 5</a>
