--- a/kelas-5/hutan/bab-5/soal/organ-pernapasan-1.html
+++ b/kelas-5/hutan/bab-5/soal/organ-pernapasan-1.html
@@ -236,7 +236,7 @@
      <div class="mt-2 text-center"><button onclick="clearAnswer()" class="px-4 py-1 bg-gray-200 hover:bg-gray-300 text-gray-700 font-semibold rounded-lg transition-all duration-200 text-xs">🔄 Hapus Jawaban</button>
      </div>
     </div><!-- BACK BUTTON AT BOTTOM -->
-    <div class="flex justify-center mt-3"><a href="https://sdn160gresik.github.io/UPT-SD-NEGERI-160-GRESIK/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html" target="_blank" rel="noopener noreferrer" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white font-bold rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-105 transition-all duration-300"> Kembali </a>
+    <div class="flex justify-center mt-3"><a href="https://sdn160gresik.github.io/UPT-SD-NEGERI-160-GRESIK/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html" class="px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white font-bold rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-105 transition-all duration-300"> Kembali </a>
     </div><!-- RETRY MESSAGE OVERLAY -->
     <div id="retry-overlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
      <div class="glass-card rounded-2xl p-8 max-w-sm w-full text-center shadow-2xl animate-retry-bounce">
