--- a/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
+++ b/kelas-5/hutan/bab-5/soal/sistem-pernapasan.html
@@ -221,7 +221,7 @@
       <div class="dropdown-content">
         <a href="organ-pernapasan-1.html">🌟 Petualangan 1</a>
         <a href="organ-pernapasan-2.html">🚀 Petualangan 2</a>
-        <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
+        <a href="organ-pernapasan-3.html">🌈 Petualangan 3</a>
         <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
         <a href="#" onclick="belumAda()">🌿 Petualangan 5</a>
         <a href="#" onclick="belumAda()">⭐ Petualangan 6</a>
