--- a/kelas-5/hutan/bab-5/soal/organ-pernapasan-3.html
+++ b/kelas-5/hutan/bab-5/soal/organ-pernapasan-3.html
@@ -236,7 +236,7 @@
      </div>
     </div><!-- BACK BUTTON AT BOTTOM -->
 <div class="flex justify-center mt-3"><a href="sistem-pernapasan.html" 
- class="px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white font-bold rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-105 transition-all duration-300"> Kembali </a>
+ class="px-6 py-3 bg-gradient-to-r from-orange-500 to-orange-600 hover:from-orange-600 hover:to-orange-700 text-white font-bold rounded-xl shadow-lg hover:shadow-2xl transform hover:scale-105 transition-all duration-300"> Kembali </a>
     </div><!-- RETRY MESSAGE OVERLAY -->
     <div id="retry-overlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
      <div class="glass-card rounded-2xl p-8 max-w-sm w-full text-center shadow-2xl animate-retry-bounce">
